test/errors/align2.rcasm
    add a
!align "string"
!align -1
    add d